@@ -8,7 +8,8 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ## [Unreleased]
 ### Fixed
 - [API_PARSER] [CISCO_UMBRELLA_MANAGED_ORG] Avoid errors and crashes when no logs are available for some customer IDs
-
+### Changed
+- [API_PARSER] [CARBON_BLACK] Use v7 of APIs
 
 
 ## [2.21.0] - 2025-02-06
